--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@jaspero/web-components",
+  "name": "@GlycanAge/web-components",
   "description": "A collection of web-components",
   "version": "0.0.0-development",
   "type": "module",
-  "main": "dist/lib/@jaspero/web-components.js",
+  "main": "dist/lib/@GlycanAge/web-components.js",
   "scripts": {
     "start": "npm run dev -s",
     "dev": "concurrently \"npm run dev:demo\" \"npm run dev:lib\"",
@@ -46,7 +46,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jaspero/web-components.git"
+    "url": "https://github.com/GlycanAge/web-components.git"
   },
   "release": {
     "branches": [
