--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
   },
   "engines": {
     "node": ">=16.14"
+  },
+  "dependencies": {
+    "svelte-icons": "^2.1.0",
+    "svelte-material-icons": "^3.0.5"
   }
 }
