--- a/package.json
+++ b/package.json
@@ -22,18 +22,17 @@
     "@tsconfig/svelte": "5.0.0",
     "autoprefixer": "10.4.14",
     "concurrently": "8.2.0",
-    "firebase": "10.1.0",
     "postcss": "8.4.31",
-    "prettier": "3.0.0",
-    "prettier-plugin-svelte": "3.0.0",
-    "semantic-release": "^21.0.7",
+    "prettier": "3.2.5",
+    "prettier-plugin-svelte": "3.1.2",
+    "semantic-release": "21.0.7",
     "svelte": "4.1.1",
     "svelte-check": "3.4.6",
     "svelte-preprocess": "5.0.4",
     "tailwindcss": "3.3.3",
     "tslib": "2.6.0",
     "typescript": "5.1.6",
-    "vite": "4.4.6",
+    "vite": "^4.5.2",
     "vite-plugin-static-copy": "0.17.0"
   },
   "license": "MIT",
@@ -55,9 +54,5 @@
   },
   "engines": {
     "node": ">=16.14"
-  },
-  "dependencies": {
-    "svelte-icons": "^2.1.0",
-    "svelte-material-icons": "^3.0.5"
   }
 }
