--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,18 +7,30 @@ on:
     paths:
       - 'packages/**'
 
+permissions:
+  contents: write
+  packages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
-    name: Build
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x]
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Update npm to latest
+        run: npm install -g npm@latest
 
       - name: Install Dependencies
         run: npm ci
@@ -26,8 +38,13 @@ jobs:
       - name: Build Library
         run: npm run build
 
+      - name: Run Tests
+        run: npm test
+
+      - name: Publish to npm
+        run: npm publish
+
       - name: Release
         run: npm run semantic-release || true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
